# home-assistant-baby-monitor

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.yaml  pyproject.toml  repository.yaml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yaml  release.yaml
baby_monitor/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  apparmor.txt  config.yaml  run.sh
baby_monitor/src/baby_monitor/: __init__.py  auth.py  database.py  home_assistant.py  main.py  media.py  models.py  notifications.py  prediction.py  providers.py  runtime.py  security.py  services.py  settings.py  statistics.py  transfer.py  webrtc.py
baby_monitor/translations/: en.yaml  es.yaml
docs/: shared-history.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: api.ts  baby-monitor-app.ts  i18n.ts  icons.ts  main.ts  sleep-rhythm.ts  styles.css  trend-format.ts  types.ts  webrtc.ts
frontend/tests/: api.test.ts  app-settings.test.ts  dashboard-layout.test.ts  history-pagination.test.ts  i18n.test.ts  navigation.test.ts  prediction-detail.test.ts  setup.ts  sleep-editor.test.ts  sleep-rhythm.test.ts  trends.test.ts  webrtc.test.ts
tests/: test_legacy_migration.py
tests/backend/: conftest.py  test_auth.py  test_database_and_media.py  test_history_transfer.py  test_home_assistant.py  test_notifications.py  test_prediction.py  test_providers.py  test_services_and_api.py  test_settings_security.py  test_statistics.py
tools/: __init__.py  migrate_legacy_sqlite.py
