[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "home-assistant-baby-monitor"
version = "0.4.0"
description = "Local-first baby monitor application for Home Assistant"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Victoriano Izquierdo" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: FastAPI",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Home Automation",
]
dependencies = [
  "cryptography>=48.0.1,<49",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pydantic>=2.9,<3",
  "python-multipart>=0.0.20,<1",
  "uvicorn[standard]>=0.34,<1",
]

[project.scripts]
baby-monitor-migrate-legacy = "tools.migrate_legacy_sqlite:main"

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-asyncio>=0.24,<2",
  "pytest-cov>=6,<8",
  "ruff>=0.11,<1",
]

[project.urls]
Homepage = "https://github.com/victoriano/home-assistant-baby-monitor"
Documentation = "https://github.com/victoriano/home-assistant-baby-monitor/blob/main/baby_monitor/DOCS.md"
Issues = "https://github.com/victoriano/home-assistant-baby-monitor/issues"
Source = "https://github.com/victoriano/home-assistant-baby-monitor"

[tool.hatch.build.targets.wheel]
packages = ["baby_monitor/src/baby_monitor", "tools"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["frontend/dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
